package com.bcopstein.ex4_lancheriaddd_v1.Dominio.Entidades;

public record CabecalhoCardapio(long id,String titulo) { }

